<resources>
    <string name="app_name">LocalCommunityServices</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="name">Name</string>
    <string name="verify">"Please Verify Your Email address! "</string>
    <string name="Login">Go Login</string>
    <string name="ops_title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="ops_location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="ops_description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="ops_requirements">Requirements</string>
    <string name="enter_requirements">Enter Requirements</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="ops_rating">Rating</string>
    <string name="ops_feedback">Feedback</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="submit">Submit</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
