<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/opsTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ops_title" />

    <EditText
        android:id="@+id/opsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsTitleLabel"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/opsLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsTitle"
        android:text="@string/ops_location" />

    <EditText
        android:id="@+id/opsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsLocationLabel"
        android:ems="10"
        android:hint="@string/enter_location"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/opsDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsLocation"
        android:text="@string/ops_description" />

    <EditText
        android:id="@+id/opsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsDescriptionLabel"
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/opsRequirementsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsDescription"
        android:text="@string/ops_requirements" />

    <EditText
        android:id="@+id/opsRequirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsRequirementsLabel"
        android:ems="10"
        android:hint="@string/enter_requirements"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/opsRequirements"
        android:text="@string/create" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opsRequirements"
        android:layout_toEndOf="@id/createButton"
        android:text="@string/clear" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/opsRequirements"
        android:layout_toEndOf="@id/clearButton"
        android:text="@string/cancel" />
</RelativeLayout>
